--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact Form</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <h1>Contact with me!</h1>
