--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <input type="text" name="name" placeholder="Name" required><br>
     <input type="email" name="email" placeholder="E-mail" required><br>
     <textarea name="message" placeholder="Message" required></textarea><br>
-    <button type="submit">Gönder</button>
+    <button type="submit">Submit</button>
   </form>
 </body>
 </html>
